# AlgoVis

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  cmake  resources.rc
include/: AppState.hpp  Constants.hpp  Shaders.hpp  UI.hpp
include/algorithms/: BFS.hpp
include/core/: Grid.hpp  Node.hpp  Types.hpp
resources/: logo-20260114-144332.piskel
src/: UI.cpp  main.cpp
src/algorithms/: AStar.cpp  BFS.cpp
src/core/: Grid.cpp  Node.cpp
tests/: GetNeighborIndexTest.cpp  GridTests.cpp
